force-app/main/default/objects/Callout__mdt/fields/Auth_Callout__c.field-meta.xml
<CustomField>
    <fullName>Auth_Callout__c</fullName>
    <description>The Developer name of Callout__mtd record which has been marked as Is_Auth_Callout__c true.</description>
    <label>Auth Callout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>