force-app/main/default/objects/Callout__mdt/fields/Auth_Callout_Handler__c.field-meta.xml
<CustomField>
    <fullName>Auth_Callout_Handler__c</fullName>
    <label>Auth Callout Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>