force-app/main/default/objects/Callout__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL of the HTTP request.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>