force-app/main/default/objects/Callout__mdt/fields/Custom_Callout_Execution__c.field-meta.xml
<CustomField>
    <fullName>Custom_Callout_Execution__c</fullName>
    <label>Custom Callout Execution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>