force-app/main/default/objects/Callout__mdt/fields/Is_Auth_Callout__c.field-meta.xml
<CustomField>
    <fullName>Is_Auth_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auth Callout</label>
    <type>Checkbox</type>
</CustomField>