force-app/main/default/objects/Callout__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>The relative path of the HTTP request.</description>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>