force-app/main/default/objects/Callout__mdt/fields/Pre_Auth_Callout_Validation__c.field-meta.xml
<CustomField>
    <fullName>Pre_Auth_Callout_Validation__c</fullName>
    <label>Pre-Auth Callout Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>