force-app/main/default/objects/Callout__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Auth_Callout__c</columns>
    <columns>Auth_Callout_Handler__c</columns>
    <columns>Base_URL__c</columns>
    <columns>Custom_Callout_Execution__c</columns>
    <columns>Is_Auth_Callout__c</columns>
    <columns>Method__c</columns>
    <columns>Path__c</columns>
    <columns>Pre_Auth_Callout_Validation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>